--- a/templates/new_category.html
+++ b/templates/new_category.html
@@ -12,7 +12,7 @@
 			<form method="post">
 				<div class="form-group">
 					<label for="name">Name:</label>
-					<input type ="text" maxlength="50" class="form-control" name="name" placeholder="Name of the new category">
+					<input type ="text" maxlength="50" class="form-control" name="name" placeholder="Name of the new category" required>
                     <div style="margin-top: 1rem">
                       <button class="button button2">Create</button>
                          <button class="button button2">
